[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.commitizen]
name = "cz_customize"


[tool.commitizen.customize]
schema_pattern = "(?s)(build|chore|ci|docs|feat|fix|minor|patch|perf|refactor|style|test|revert)(\\(\\S+\\))?!?:( [^\\n\\r]+)((\\n\\n.*)|(\\s*))?$"


[tool.poetry]
# Fill in the details in this section.
name = "RTSim"
version = "0.1.0"
license = "LICENSE.md"
readme = "README.md"
keywords = ["inertial signals", "rotational testbeds", "inertial sensor testing"]
repository = "https://github.com/sandialabs/RTSim"
description = "RTSim is a Python module for simulating the inertial outputs of rotational testbeds (RT)."
documentation = "https://RTSim.readthedocs.io"
authors = [
    "Author One <jkbingh@sandia.gov>",
    "Author Two <mrwalke@sandia.gov>",
]
# See https://pypi.org/classifiers/ for more classifiers.
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[tool.poetry.urls]
CI = "https://github.com/sandialabs/RTSim/actions"
Issues = "https://github.com/sandialabs/RTSim/issues"


[tool.poetry.dependencies]
python = ">=3.10"


[tool.ruff]
line-length = 120


[tool.ruff.lint]
extend-select = [
    "A",
    "B",
    "BLE",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "NPY",
    "PGH",
    "PL",
    "PT",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "TID",
    "TCH",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "D212",
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "F401"]
"**/test_*.py" = ["S101"]


[tool.semantic_release]
build_command = "python3 -m pip install poetry && poetry build"
commit_message = """
chore: Release v{version}

Automatically generated by python-semantic-release."""
version_variables = [
    "doc/source/conf.py:version",
    "rtsim/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]


[tool.semantic_release.branches.master]
match = "master"


[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "Merge pull request",
]


[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"


[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "minor",
    "patch",
    "perf",
    "refactor",
    "style",
    "test",
]
minor_tags = ["feat", "minor"]
patch_tags = ["fix", "patch", "perf"]
